fix: update CORS configuration